--- a/public/css/newcss.css
+++ b/public/css/newcss.css
@@ -15,7 +15,7 @@ html{
   min-width: 1350px;
 }
 
-#body {
+body {
   min-width: 1350px;
 }
 /* @media only screen and (max-width:500px){
@@ -168,7 +168,7 @@ html{
   }
   
   .showcase {
-    background-image: url("/img/drewsketchnobck.PNG");
+    background-image: url("/img/drewsketchnobck.png");
     background-repeat: no-repeat;
     background-position: center -220px;
     background-size: 900px;
@@ -177,12 +177,12 @@ html{
   }
   .c:nth-child(1) {
     grid-column: 1/3;
-    background-image: url("/img/logo1.PNG");
+    background-image: url("/img/logo1.png");
     background-position: center center;
   }
   .c:nth-child(2) {
     grid-column: 3/5;
-    background-image: url("/img/logo2.PNG");
+    background-image: url("/img/logo2.png");
     background-position: center center;
   }
   
