--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
             <h2>Drew Munter</h2>
             <p>Enthusiast. Computer Science. Curious.</p>
         </div>
-        <div>
+        <div class="aside-list">
             <ul>
                 <a href="#sectionHome"><li>Home</li></a>
                 <a href="#sectionEducation"><li>Education</li></a>
@@ -95,7 +95,7 @@
                             <li>Excel</li>
                             <li>Github</li>
                             <li>JavaScript</li>
-                            <li>Microsoft</li>
+                            <li>Windows 10</li>
                             <li>MySQL</li>
                             <li>HTML</li>
                             <li>NODE.JS</li>
@@ -136,7 +136,7 @@
                         <div class="project-left">
                             <div class="title"><H2>Conways Game of Life</H2></div>
                             <div class="caption"><p>The game life is a cellular automaton starting 
-                                with a single beginning state in which each evolution is determined by its previous state</p></div>
+                                with a predetermined beginning state. Each following generation is determined by the boards previous state</p></div>
                         </div>
                         <div class="project-right">
                             <div class="game-of-life-img"></div>
@@ -153,7 +153,7 @@
                        
                         <div class="project-left">
                             <div class="title"><H2>Website Clones</H2></div>
-                            <div class="caption"><p>Built multiple fully dynamic websites including a netflix landing page and 
+                            <div class="caption"><p>Built multiple responsive/dynamic webpages including a netflix landing page and 
                                 blog forums using HTML, JavaScript, and CSS 
                             </p></div>
                         </div>
