--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
                 </div>
                 <div class = "about-content">
                     <p>Im student at University of South Dakota working towards a BS in Computer Science. </p>
-                    <p>I'm looking for a field to apply my knowledge learn from a team of for continious improvement</p>
+                    <p>I'm looking for a field to apply my knowledge and learn from a team as well as contribute the skills I have</p>
                 </div>
 
 
