--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Not available on mobile devices at this time</h2>
+    <p>Not available on mobile devices at this time</p> 
 </body>
 </html>
