--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,7 @@
     <script type = "application/javascript">
         if(screen.width <=699){
             document.location= "mobile"
-        } 
-    
+        }    
     </script>
     <aside class = "sidebar">
         <div  class = "name">
@@ -34,7 +33,7 @@
                 <a href="#sectionContact"><li>Contact</li></a>
                 <br>       
             </ul>
-            <div class = "view-code"><a href ="https://github.com/dmunter">View my code for this website</a></div>
+            <div class = "view-code"><a href ="https://github.com/dmunter/Portfolio_Website_v1">View my code for this website</a></div>
         </div>
         <div class = "social">
             <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -64,8 +63,9 @@
                     <div class = "about-tag-line"></div>
                 </div>
                 <div class = "about-content">
-                    <p>Im student at University of South Dakota working towards a BS in Computer Science. </p>
-                    <p>I'm looking for a field to apply my knowledge and learn from a team as well as contribute the skills I have</p>
+                    <p>My name is Drew Munter and I am a senior at the University of South Dakota. <br>
+                    My passion for computer technology has motivated to receive a Bachelor of Science degree in computer science.
+                    I am seeking a field opportunity to apply my knowledge and professional skills to others who are also enthusiastic about computer technology.</p>
                 </div>
 
 
@@ -117,7 +117,7 @@
                        
                         <div class="project-left">
                             <div class="title"><H2>Iowa Land Usage</H2></div>
-                            <div class="caption"><p>A script built to handle large data sets 
+                            <div class="caption"><p>A script optimized for large data sets 
                             given by open sourced government programs. Manipulates data as integer values
                             to identifty land trends in multiple counties in the state of Iowa</p></div>
                         </div>
@@ -136,7 +136,7 @@
                         <div class="project-left">
                             <div class="title"><H2>Conways Game of Life</H2></div>
                             <div class="caption"><p>The game life is a cellular automaton starting 
-                                with a predetermined beginning state. Each following generation is determined by the boards previous state</p></div>
+                                with a predetermined beginning state. Each following generation is determined by the boards' previous state</p></div>
                         </div>
                         <div class="project-right">
                             <div class="game-of-life-img"></div>
@@ -152,7 +152,7 @@
                         </div>
                        
                         <div class="project-left">
-                            <div class="title"><H2>Website Clones</H2></div>
+                            <div class="title"><H2>Website Clone</H2></div>
                             <div class="caption"><p>Built multiple responsive/dynamic webpages including a netflix landing page and 
                                 blog forums using HTML, JavaScript, and CSS 
                             </p></div>
