--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -112,7 +112,7 @@
     background-position: center;
     background-size:240px ;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    transition: all 2s ease;
+    transition: all .1s ;
    
   }
 
