Added fourth Project

--- a/public/css/newcss.css
+++ b/public/css/newcss.css
@@ -136,6 +136,10 @@ body {
   }
   #sectionHome{
     margin-bottom: 50px;
+
+  }
+  .hello-there{
+    font-weight: 300;
   }
   .content {
     float: right;
