--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
         </header>
         
         <div class="tabs">
-            <div id="sectionHome" ><h1>Hello There!</h1></div>
+            <div id="sectionHome" ><h1 class = 'hello-there'>Hello There!</h1></div>
             <div class = "main">   
                 <div  class ="about-tag">
                     <div class = "about-tag-flag"> <h2>ABOUT</h2></div>
@@ -125,6 +125,28 @@
                             <div class="Iowa-img"></div>
                         </div>
                     </div>
+
+                    <div class="react-quiz">
+                        <div class = "grid">
+                            <div class="grid-1"></div>
+                            <div class="grid-2"></div>
+                            <div class="grid-3"></div>
+                        </div>
+                       
+                        <div class="project-left">
+                            <div class="title"><H2>Should I Drink a Coffee?    --Quiz</H2></div>
+                            <div class="caption"><p>A 10 question interactive quiz built using React JS library.
+                            Includes use of react features such as state management, JSX components, and event handling.
+                            Original CSS style and design
+                            </p></div>
+                        </div>
+                        <div class="project-right">
+                             <a target="_blank" href="https://dmunter.github.io/Coffee_Quiz/"><div class="react-img"></div></a>
+                        </div>
+                    </div>
+
+
+
 
                     <div class="game-of-life">
                         <div class = "grid">
