--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="%PUBLIC_URL%/calendar-regular.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "keywords" author = 'Drew Munter' >
     <meta name="Portfolio website">
@@ -126,6 +127,26 @@
                         </div>
                     </div>
 
+                    <div class="React-calendar Iowa">
+                        <div class = "grid">
+                            <div class="grid-1"></div>
+                            <div class="grid-2"></div>
+                            <div class="grid-3"></div>
+                        </div>
+                       
+                        <div class="project-left">
+                            <div class="title"><H2>Calendar Web App</H2></div>
+                            <div class="caption"><p>A functional web application built with React framework.
+                                A front end web project created with exemplified use of React modules. Multiple page navigation
+                                handled by routers and conditional component rendering. 
+                            </p></div>
+                        </div>
+                        <div class="project-right">
+                            <a href="https://dmunter.github.io/calendar/"></a><div class="calendar-img"></div>
+                        </div>
+                    </div>
+
+
                     <div class="react-quiz">
                         <div class = "grid">
                             <div class="grid-1"></div>
@@ -136,7 +157,7 @@
                         <div class="project-left">
                             <div class="title"><H2>Should I Drink a Coffee?    --Quiz</H2></div>
                             <div class="caption"><p>A 10 question interactive quiz built using React JS library.
-                            Includes use of react features such as state management, JSX components, and event handling.
+                            Includes use of React features such as state management, JSX components, and event handling.
                             Original CSS style and design
                             </p></div>
                         </div>
