--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="%PUBLIC_URL%/calendar-regular.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "keywords" author = 'Drew Munter' >
     <meta name="Portfolio website">
@@ -142,7 +141,7 @@
                             </p></div>
                         </div>
                         <div class="project-right">
-                            <a href="https://dmunter.github.io/calendar/"></a><div class="calendar-img"></div>
+                            <a href="https://dmunter.github.io/calendar/"><div class="calendar-img"></div></a>
                         </div>
                     </div>
 
