added additional project to dashboard

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -67,7 +67,9 @@
         left: 5%; 
       }
 
-
+a{
+  color: black;
+}
 
 .Iowa{
     height:300px;
@@ -101,6 +103,33 @@
   box-shadow: inset 0px 0px 20px 10px rgba(117, 117, 117, 0.9), rgba(0, 0, 0, 0.35) 0px 10px 25px;
   
 }
+.react-redux-firebase{
+  
+  height:300px;
+  width: 500px;
+  align-items: center;
+  width: 75%;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 80px;
+}
+
+.react-redux-firebase-img{
+  
+  position: relative;
+    z-index: 9;
+    height: 175px;
+    width:270px ;
+    opacity: .9;
+    filter: brightness(90%);
+    background-size:375px ;
+    background-image: url('/img/message-board.jpg')  ;
+    background-position: -50px 0px;
+    box-shadow: inset 0px 0px 5px 5px rgba(170, 170, 170, 0.6), rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
+}
+
+
 .calendar-img{
   position: relative;
   z-index: 9;
