--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,6 +108,7 @@
                     <div class = "projects-tag-line"></div>
                 </div>
                 <div class = "projects-content">
+
                     <div class="Iowa">
                         <div class = "grid">
                             <div class="grid-1"></div>
@@ -119,12 +120,34 @@
                             <div class="title"><H2>Iowa Land Usage</H2></div>
                             <div class="caption"><p>A script optimized for large data sets 
                             given by open sourced government programs. Manipulates data as integer values
-                            to identifty land trends in multiple counties in the state of Iowa</p></div>
+                            to identifty land trends in multiple counties in the state of Iowa.</p></div>
                         </div>
                         <div class="project-right">
                             <div class="Iowa-img"></div>
                         </div>
                     </div>
+
+                    <div class="react-redux-firebase">
+                        <div class = "grid">
+                            <div class="grid-1"></div>
+                            <div class="grid-2"></div>
+                            <div class="grid-3"></div>
+                        </div>
+                        <a href="https://back-end-test-93720.firebaseapp.com/">
+                        <div class="project-left">
+                            <div class="title"><H2>Chat Snap</H2></div>
+                            <div class="caption"><p>Chat Snap is a social messaging board built to share ideas. 
+                                Begin by creating an account. Then, formulate a message to submit to the dashboard that will become visible for your friends to see.
+                    
+                            </p></div>
+                        </div>
+                        <div class="project-right">
+                            <div class="react-redux-firebase-img"></div>
+                        </div>
+                        </a>
+                    </div>
+
+
 
                     <div class="React-calendar Iowa">
                         <div class = "grid">
@@ -132,7 +155,7 @@
                             <div class="grid-2"></div>
                             <div class="grid-3"></div>
                         </div>
-                       
+                        <a href="https://dmunter.github.io/calendar/">
                         <div class="project-left">
                             <div class="title"><H2>Calendar Web App</H2></div>
                             <div class="caption"><p>A functional web application built with React framework.
@@ -141,8 +164,9 @@
                             </p></div>
                         </div>
                         <div class="project-right">
-                            <a href="https://dmunter.github.io/calendar/"><div class="calendar-img"></div></a>
+                           <div class="calendar-img"></div>
                         </div>
+                        </a>
                     </div>
 
 
@@ -152,7 +176,7 @@
                             <div class="grid-2"></div>
                             <div class="grid-3"></div>
                         </div>
-                       
+                        <a target="_blank" href="https://dmunter.github.io/Coffee_Quiz/">
                         <div class="project-left">
                             <div class="title"><H2>Should I Drink a Coffee?    --Quiz</H2></div>
                             <div class="caption"><p>A 10 question interactive quiz built using React JS library.
@@ -161,8 +185,9 @@
                             </p></div>
                         </div>
                         <div class="project-right">
-                             <a target="_blank" href="https://dmunter.github.io/Coffee_Quiz/"><div class="react-img"></div></a>
+                             <div class="react-img"></div>
                         </div>
+                        </a>
                     </div>
 
 
