changed html link route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,11 +133,11 @@
                             <div class="grid-2"></div>
                             <div class="grid-3"></div>
                         </div>
-                        <a href="https://back-end-test-93720.firebaseapp.com/">
+                        <a href="https://chatsnap.app/">
                         <div class="project-left">
                             <div class="title"><H2>Chat Snap</H2></div>
                             <div class="caption"><p>Chat Snap is a social messaging board built to share ideas. 
-                                Begin by creating an account. Then, formulate a message to submit to the dashboard that will become visible for your friends to see.
+                                Begin by creating an account. Then formulate a message to submit to the dashboard that will become visible for your friends to see.
                     
                             </p></div>
                         </div>
